Fix alignement in settings

--- a/src/components/account-settings/AccountSettings.scss
+++ b/src/components/account-settings/AccountSettings.scss
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .section {
     margin-top: 1rem;
