--- a/src/components/account-settings/components/general/General.scss
+++ b/src/components/account-settings/components/general/General.scss
@@ -3,4 +3,5 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: .5rem;
+    width: 100%;
 }
